[tool.poetry]
name = "actproxy"
version = "0.1.1"
description = "Sync & asyncio (Requests & AIOHTTP) proxy rotator + utils for actproxy API & services."
authors = ["TensorTom <14287229+TensorTom@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/TensorTom/actproxy"
repository = "https://github.com/johnfraney/actproxy"
keywords = ["python", "socks", "aiohttp", "requests", "python3", "socks5", "proxies", "rotate", "actproxy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]

[tool.poetry.dependencies]
python = "^3.8.5"
aiohttp = "^3.6.2"
aiohttp-socks = "^0.5.5"
mo-dots = "^3.93.20259"
requests = {extras = ["socks"], version = "^2.24.0"}

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
setupgen = "poetry.command_line:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

