[tool.poetry]
name = "actproxy"
version = "0.1.6"
description = "Sync & asyncio (Requests & AIOHTTP) proxy rotator + utils for actproxy API & services."
authors = ["TensorTom <14287229+TensorTom@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://actproxy.com/aff.php?aff=30"
repository = "https://github.com/tensortom/actproxy"
keywords = ["python", "socks", "aiohttp", "requests", "python3", "socks5", "proxies", "rotate", "actproxy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "==3.6.3"
aiohttp-socks = "^0.5.5"
mo-dots = "^3.93.20259"
requests = {extras = ["socks"], version = "^2.24.0"}
pytest = "^6.1.1"
pytest-asyncio = "^0.14.0"
pytest-aiohttp = "^0.3.0"
toml = "^0.10.1"
typing_extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
jupyter = "^1.0.0"

[tool.poetry.scripts]
setupgen = "poetry.command_line:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

